--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "laravel/ui": "^4.2",
         "tcg/voyager": "dev-1.6-l10"
     },
     "require-dev": {
