--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,8 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.2",
+        "srmklive/paypal": "~3.0",
+        "stripe/stripe-php": "^10.15",
         "tcg/voyager": "dev-1.6-l10"
     },
     "require-dev": {
