--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.2",
+        "phpwhois/phpwhois": "*",
         "srmklive/paypal": "~3.0",
         "stripe/stripe-php": "^10.15",
         "tcg/voyager": "dev-1.6-l10"
